Fix Contrast

--- a/index.css
+++ b/index.css
@@ -78,7 +78,12 @@ header img, .navigation {
 }
 
 .hero {
+    display: flex;
     position: relative;
+    background-color: hsl(0, 0%, 17%);
+    padding-bottom: 0;
+    margin-bottom: 0;
+    border-bottom: 0;
 }
 
 .hero img {
@@ -101,7 +106,7 @@ h1 {
     font-weight: 700;
     color: hsl(0, 0%, 100%);
     margin-bottom: 1em;
-    text-shadow: 0 0 20px black;
+    text-shadow: 0 0 15px black;
 }
 
 .call-to-action a {
